# react-native-test-app

./: .clang-format  .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .npmignore  .rubocop.yml  .swiftformat  .swiftlint.yml  .yarnrc.yml  Brewfile  CONTRIBUTING.md  Gemfile  README.md  ReactTestApp-DevSupport.podspec  ReactTestApp.podspec  eslint.config.js  msbuild.binlog  package.json  plopfile.js  react-native.config.js  schema.json  test-app-native-modules.gradle  test-app-util.gradle  test-app.gradle  test-app.sln  test_app.rb  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json
.github/: CODEOWNERS  dependabot.disabled.yml  dependabot.yml  eslint-stylish.json  eslint.config.js  jest.config.js  ktlint.json  labeler.yml  minitest.json  prettierrc.json  pull_request_template.md  renovate.json  rubocop.json  semantic-release.json  swiftformat.json  swiftlint.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  new-major-version.md  (+1 more)
android/: android-manifest.js  autolink.gradle  autolink.mjs  build.gradle  config-plugins.gradle  dependencies.gradle  force-resolve-trove4j.gradle  gradle-wrapper.js  gradle.properties  manifest.gradle  media-types.gradle  node.gradle  package.json  react-native-build.gradle  react-native.gradle  settings.gradle  test-app-native-modules.gradle  test-app-util.gradle  utils.gradle
android/app/src/main/jni/: Android.mk  AppRegistry.cpp  AppRegistry.h  AutolinkingCompat.h  CMakeLists.txt  ComponentsRegistry.cpp  ComponentsRegistry.h  OnLoad.cpp  TurboModuleManagerDelegate.cpp  TurboModuleManagerDelegate.h
common/: AppRegistry.cpp  AppRegistry.h
docs/: android.features.md  android.icons.md  android.package.md  android.permissions.md  bundleRoot.md  ios.buildNumber.md  ios.codeSignEntitlements.md  ios.icons.alternateIcons.md  ios.icons.md  ios.icons.primaryIcon.md  ios.privacyManifest.md  macos.applicationCategoryType.md  version.md  windows.appxManifest.md  windows.certificatePassword.md
example/: .gitignore  .yarnrc-offline  App.js  App.tsx  Example-Tests.podspec  Example-dev.podspec  Podfile  app.json  babel.config.js  gradle.properties  gradlew.bat  index.js  index.ts  metro.config.js  metro.config.macos.js  metro.config.windows.js  package.json  react-native.config.js  settings.gradle  tsconfig.json
ios/: ReactTestApp.common.xcconfig  ReactTestApp.debug.xcconfig  ReactTestApp.release.xcconfig  assets_catalog.rb  entitlements.rb  info_plist.rb  node.rb  pod_helpers.rb  privacy_manifest.rb  test_app.rb  use_react_native-0.60.rb  use_react_native-0.61.rb  use_react_native-0.62.rb  use_react_native-0.63.rb  use_react_native-0.64.rb  use_react_native-0.68.rb  use_react_native-0.70.rb  use_react_native-0.71.rb  xcode.rb
macos/: ReactTestAppShared  test_app.rb
plugins/: index.js  macos.js  reanimated.js
scripts/: MSBuild.ps1  Renew-SelfSignedCertificate.ps1  VSTest.ps1  affected.mjs  android-nightly.patch  apply-config-plugins.mjs  clang-format-diff.sh  colors.mjs  configure-projects.js  configure.js  configure.mjs  copy-yarnrc.mjs  disable-safe-area-context.patch  generate-manifest-docs.mjs  generate-manifest.js  generate-manifest.mjs  generate-schema.mjs  gradle-clean-cache.sh  helpers.js  init.js  init.mjs  install-test-template.sh  link.js  lint-commit.mjs  pack.mjs  parseargs.js  parseargs.mjs  patch-cli-platform-android.js  prepare-viewfinder.mjs  prettier-diff.js  prettier-diff.mjs  release-notes.mjs  schema.js  schema.mjs  set-react-version.js  set-react-version.mjs  shasum.js  shasum.mjs  template.js  template.mjs  (+12 more)
test/: configure-projects.test.mjs  configure-projects.test.ts  configure.test.js  copyAndReplace.test.js  findNearest.test.js  findUserProjects.test.js  fs-promises.mock.js  fs.mock.js  fs.mock.mjs  fs.mock.ts  generateSolution.test.js  getBundleResources.test.js  getPackageVersion.test.js  getVersionNumber.test.js  helpers.test.js  helpers.test.mjs  helpers.test.ts  mockFiles.js  pack.test.js  pack.test.mjs  pack.test.ts  parseResources.test.js  plop.test.js  react-native.js  react-native.mjs  react-native.ts  replaceContent.test.js  spy.mjs  spy.ts  template.ts  test_node.rb  test_pod_helpers.rb  test_test_app.rb  test_xcode.rb  validate-manifest.test.js  validate-manifest.test.mjs
visionos/: test_app.rb
windows/: .clang-format  .gitignore  ExperimentalFeatures.props  ReactNativeTestApp.sln  ReactTestApp.sln  project.mjs  test-app.js  test-app.mjs  test-app.ts  uwp.mjs  win32.mjs
(+479 files in other folders)
